Add uv shader demo

--- a/1-barycentric-raw-shader/index.html
+++ b/1-barycentric-raw-shader/index.html
@@ -15,7 +15,7 @@
   <canvas id="gl"></canvas>
   <script src="../libs/three.min.js"></script>
   <script src="../libs/three.orbit-controls.js"></script>
-  <script src="js/land.js"></script>
+  <script src="js/floor.js"></script>
   <script src="js/gl.js"></script>
 </body>
 </html>
